fix: remove transition from delete button as it doesn't make it look too nice when focus visible

--- a/app/components/card/Card.css
+++ b/app/components/card/Card.css
@@ -59,7 +59,6 @@
 
     button {
       padding: 8px;
-      transition: 0.1s;
 
       &:hover {
         background-color: var(--colors-primary-200);
